# Moment

./: .coverage  .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PKGBUILD  README.md  SECURITY.md  SECURITY_AUDIT.md  TRUTH.md  agents.md  coverage.json  knowledge.md  pyproject.toml
.github/: pull_request_template.md
.github/wiki/: Architecture.md  Cloud-Storage.md  Configuration.md  Development.md  Encoding.md  FAQ.md  Getting-Started.md  Home.md  Keyboard-Shortcuts.md  Recording.md  _Sidebar.md
.github/workflows/: ci.yml  release.yml
.opencode/plans/: fix-ci-and-release.md  ui-revamp.md
.opencode/plans/phases/: 00-icons.md  01-design-system.md  02-layout.md  03-cards.md  04-player.md  05-stats.md  06-settings.md  07-rest-pages.md
_wiki/: Home
docs/: fleshed-out-spec.md  gaps-and-decisions-spec.md  plan.md  storage-providers.md  tray-launcher-spec.md
docs/architecture/: ci-pipeline.md  request-flow.md
docs/database/: schema.md
docs/guides/: getting-started.md  releasing.md  testing.md
install/: install.sh  moment-bot.service  moment.desktop  save-replay.sh
specs/: spec-eight.md  spec-eleven.md  spec-nine.md  spec-seven.md  spec-ten.md  spec-twelve.md
src/clip_tray/: __init__.py  __main__.py  main.py
src/clip_tray/bot/: __init__.py  main.py
src/clip_tray/core/: bookmarker.py  config.py  corruption.py  discord_bot.py  encoder.py  game_profiles.py  hotkey_daemon.py  import_export.py  models.py  noise_suppression.py  pipeline.py  recorder_controller.py  retention.py  screenshot.py  store.py  thumbnail.py  uploader.py  watcher.py
src/clip_tray/mcp/: __init__.py  main.py  server.py  tools.py
src/clip_tray/ui/: app.py  main_window.py  resources.py  tray.py
src/clip_tray/ui/assets/: __init__.py
src/clip_tray/ui/dialogs/: __init__.py  game_profile_dialog.py  settings_dialog.py  tag_dialog.py  trim_dialog.py
src/clip_tray/ui/editor/: __init__.py  editor_window.py  filter_panel.py  gif_exporter.py  merge_panel.py  music_panel.py  timeline_panel.py
src/clip_tray/ui/pages/: __init__.py  grid_page.py  player_page.py  stats_page.py  trash_page.py  webhook_page.py
src/clip_tray/ui/widgets/: __init__.py  audio_mixer.py  clip_delegate.py  context_menu.py  hover_preview.py  pip_window.py  processing_banner.py  progress_ring.py  review_card.py  search_bar.py  skeleton_card.py  toast.py  transition_picker.py
src/clip_tray/utils/: ffmpeg.py  logging.py
src/moment/: __init__.py  __main__.py  main.py
src/moment/bot/: __init__.py  main.py
src/moment/core/: __init__.py  bookmarker.py  config.py  corruption.py  discord_bot.py  encoder.py  encryption.py  event_bus.py  game_monitor.py  game_profiles.py  gsr_controller.py  gsr_watcher.py  hotkey_daemon.py  import_discovery.py  import_export.py  migrations.py  models.py  noise_suppression.py  pipeline.py  recorder_controller.py  retention.py  screenshot.py  store.py  thumbnail.py  updater.py  uploader.py  watcher.py
src/moment/core/repositories/: __init__.py  base.py  bookmark_repo.py  clip_repo.py  folder_repo.py  profile_repo.py  settings_repo.py  tag_repo.py  task_repo.py  webhook_repo.py
src/moment/mcp/: __init__.py  main.py  server.py  tools.py
src/moment/ui/: __init__.py  app.py  base_dialog.py  main_window.py  resources.py  tray.py
src/moment/ui/assets/icons/: __init__.py
src/moment/ui/dialogs/: __init__.py  about_dialog.py  game_profile_dialog.py  import_wizard.py  manual_game_dialog.py  settings_dialog.py  tag_dialog.py  trim_dialog.py
src/moment/ui/editor/: __init__.py  editor_window.py  filter_panel.py  gif_exporter.py  merge_panel.py  music_panel.py  timeline_panel.py
src/moment/ui/pages/: grid_page.py  player_page.py  recording_page.py  stats_page.py  trash_page.py  webhook_page.py
src/moment/ui/services/: __init__.py  async_loader.py  global_hotkey.py
src/moment/ui/widgets/: audio_mixer.py  clip_delegate.py  context_menu.py  hover_preview.py  overlay.py  pip_window.py  processing_banner.py  progress_ring.py  review_card.py  search_bar.py  skeleton_card.py  tag_dialog.py  timeline_editor.py  toast.py  transition_picker.py
src/moment/utils/: __init__.py  ffmpeg.py  logging.py  subprocess.py  system.py
tests/: conftest.py  test_about_dialog.py  test_app.py  test_audio_mixer.py  test_bookmarker.py  test_bot_main.py  test_config.py  test_context_menu.py  test_corruption.py  test_discord_bot.py  test_editor_window.py  test_encoder.py  test_encryption.py  test_event_bus.py  test_ffmpeg.py  test_filter_panel.py  test_game_monitor.py  test_game_profile_dialog.py  test_game_profiles.py  test_gif_exporter.py  test_global_hotkey.py  test_grid_page.py  test_gsr_controller.py  test_gsr_watcher.py  test_hotkey_daemon.py  test_hover_preview.py  test_import_discovery.py  test_import_export.py  test_logging.py  test_logging_extended.py  test_main.py  test_main_window.py  test_mcp_main.py  test_mcp_server.py  test_mcp_tools.py  test_merge_panel.py  test_migrations.py  test_models.py  test_music_panel.py  test_noise_suppression.py  (+38 more)
