[project]
name = "moment"
version = "0.1.0"
description = "GPU-accelerated game clip manager for Linux. Capture, edit, and share your gaming moments."
requires-python = ">=3.11"
authors = [{ name = "chasem" }]
license = { text = "GPL-3.0" }
keywords = ["gaming", "clips", "recording", "gpu", "nvenc", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "cryptography>=41",
    "sqlcipher3>=0.6",
    "keyring>=25",
]

[project.optional-dependencies]
bot = ["discord.py>=2.4"]
mcp = ["fastmcp>=1.0"]
import-export = ["python-magic>=0.4"]
all = ["moment[bot,mcp,import-export]"]

[project.scripts]
moment = "moment.main:main"
moment-bot = "moment.bot.main:run_bot"
moment-mcp = "moment.mcp.main:run_mcp"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["moment*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
