[project]
name = "moment-clips"
version = "0.3.17"
description = "GPU-accelerated game clip manager for Linux. Capture, edit, and share your gaming moments."
requires-python = ">=3.11"
authors = [{ name = "chasem" }]
license = { text = "GPL-3.0" }
keywords = ["gaming", "clips", "recording", "gpu", "nvenc", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "cryptography>=41",
    "sqlcipher3>=0.6",
    "keyring>=25",
]

[project.optional-dependencies]
bot = ["discord.py>=2.4"]
mcp = ["fastmcp>=1.0"]
import-export = ["python-magic>=0.4"]
test = ["pytest-qt>=4", "pytest-timeout>=2"]
all = ["moment[bot,mcp,import-export,test]"]

[project.scripts]
moment = "moment.main:main"
moment-bot = "moment.bot.main:run_bot"
moment-mcp = "moment.mcp.main:run_mcp"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["moment*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
moment = [
    "ui/assets/**/*.svg",
    "ui/assets/**/*.png",
    "ui/assets/**/*.qrc",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"tests/*.py" = ["E402", "ANN201"]}

[tool.ruff.format]
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = [
    "B101", "B108", "B110", "B310", "B311", "B324", "B404", "B603", "B607", "B608",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
# Thread method avoids SIGALRM conflicts with ffmpeg/GSR subprocesses.
timeout_method = "thread"
markers = [
    "unit: fast unit tests (implicit default for tests with no other marker)",
    "gui: tests requiring PyQt6 widgets, QApplication, qtbot, or a display",
    "integration: real filesystem, threads, ffmpeg/GSR/DB workflows",
    "slow: tests known to take materially longer than typical unit tests",
    "external: tests requiring real network, GSR, rclone, or OS services",
]
